2015-05-29  François  <francois@dechelle.net>

	* fixed bug/crash in scan daemon

2015-05-12  François  <francois@dechelle.net>

	* added watch daemon using dbus

2015-04-17  François  <francois@dechelle.net>

	* reimplemented daemon server part using GIO, in order to support dbus signals

2015-03-17  François  <francois@dechelle.net>

	* fixed directory traversal bug in case of access denied

2015-03-16  François  <francois@dechelle.net>

	* fixed g_thread_init() (must add to configure)

2015-03-05  François  <francois@dechelle.net>

	* added option to suppress printing clean files in uhuru-scan; added use of epoll()

2015-03-04  François  <francois@dechelle.net>

	* tested local vs. remote: output is exactly the same

	* tested remote scanning using uhuru-scan command line

	* finished implementation of remote scanning in libumwsu

2015-03-02  François  <francois@dechelle.net>

	* tested remote scanning using netcat; works but termination must be fixed

	* changed configuration to add set/get functions; changed server code to use configuration

2015-03-01  François  <francois@dechelle.net>

	* added 'remote' module for configuration; cleaned server code

2015-02-26  François  <francois@dechelle.net>

	* adding use of epoll()

	* added skeleton of scan daemon

	* reorganisation of directories for daemon implementation

2015-02-24  François  <francois@dechelle.net>

	* added quarantine implementation; tested

2015-02-19  François  <francois@dechelle.net>

	* changed modules scan function in order to pass file mime type, so that modules can make scan decisions based on mime-type

	* adding quarantine as module

2015-02-11  François  <francois@dechelle.net>

	* added output in protocol handler

	* added callbacks in protocol handler

2015-02-10  François  <francois@dechelle.net>

	* implemented first working version of protocol handler

	* adding scan process protocol implementation

2015-01-26  François  <francois@dechelle.net>
